# shaderbox

./: .directory  .gitignore  CMakeLists.txt  README.md  fragment.frag  vertex.vs
include/: shader.hpp
src/: glad.c  main.cpp  shader.cpp
